--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Proyecto de prueba usado para el aprendizaje de la API de MercadoPago",
   "main": "app.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "deploy": "vercel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
